syntax = "proto3";
package reapchain.crypto;

option go_package = "github.com/reapchain/reapchain-core/proto/podc/crypto";

import "gogoproto/gogo.proto";

// PublicKey defines the keys available for use with ReapchainCore Validators
message PublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal)   = true;

  oneof sum {
    bytes ed25519   = 1;
    bytes secp256k1 = 2;
  }
}
